--- a/src/App.scss
+++ b/src/App.scss
@@ -36,9 +36,27 @@ h2 {
   font-size: 20px;
 }
 
-.home-title {
-  margin-top: 28px;
+.home {
   margin-bottom: 20px;
+  &-title {
+    margin-top: 28px;
+    margin-bottom: 20px;
 
-  color: $dark-gray;
+    color: $dark-gray;
+  }
+
+  &-items {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 30px;
+
+    @media (max-width: 1200px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (max-width: 830px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
 }
