--- a/src/variables.scss
+++ b/src/variables.scss
@@ -4,5 +4,6 @@ $background: #eaeaea;
 $white: #ffffff;
 $dark-gray: #838383;
 $orange: #ffa542;
+$yellow:  #FFCE7F;
 
 $box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
