--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -22,6 +22,10 @@
     li {
       margin-bottom: 10px;
       cursor: pointer;
+      
+      &:hover{
+        color: $orange;
+      }
     }
   }
   .settings {
@@ -29,6 +33,10 @@
       display: block;
       margin-bottom: 34px;
       cursor: pointer;
+      
+      &:hover{
+        color: $orange;
+      }
     }
 
     .languages {
