--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,7 +3,9 @@ $black-icon: #101010;
 $background: #eaeaea;
 $white: #ffffff;
 $dark-gray: #838383;
+$light-gray:#AAAAAA;
 $orange: #ffa542;
 $yellow:  #FFCE7F;
 
 $box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+$button-shadow: 0px 0px 20px rgba(0, 0, 0, 0.25);
