add SessionStorage, customHook, fix styles

--- a/src/components/ItemCounter/ItemCounter.module.scss
+++ b/src/components/ItemCounter/ItemCounter.module.scss
@@ -2,6 +2,13 @@
 
 .button {
   position: relative;
+
+  svg {
+    fill: $dark-gray;
+    :hover {
+      fill: $black-icon;
+    }
+  }
 }
 
 .circle {
