--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   list-style: none;
   outline: none;
+  text-decoration: none;
 }
 
 body {
@@ -99,12 +100,12 @@ h2 {
       font-family: Montserrat;
       font-weight: 600;
       font-size: 17px;
-      border:none;
+      border: none;
       border-radius: 20px;
       box-shadow: $button-shadow;
       cursor: pointer;
 
-      &:hover{
+      &:hover {
         background-color: $orange;
       }
     }
