--- a/src/components/CartItem/CartItem.module.scss
+++ b/src/components/CartItem/CartItem.module.scss
@@ -7,6 +7,7 @@
   width: 633px;
   padding: 18px;
   padding-right: 28px;
+  margin-bottom: 10px;
   background-color: $white;
   box-shadow: $box-shadow;
   border-radius: 30px;
